Align route planning around GA and ACO comparison
Keep GA as the operational planner while completing the shared routing support, ACO comparison path, benchmark outputs, and technical documentation needed for the algorithm presentation.